--- a/popup.html
+++ b/popup.html
@@ -1,42 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="button.css" />
-  </head>
-  <body>
-    <table id="tableList">
-      <tr>
-        <th>id</th>
-        <th>Activate</th>
-        <th>Angular</th>
-        <th>Domain</th>
-        <th>FromSrc</th>
-        <th>Name</th>
-      </tr>
-    </table>
-    <table>
-      <tr>
-        <th>Activate</th>
-        <th>Angular</th>
-        <th>Domain</th>
-        <th>FromSrc</th>
-        <th>Name</th>
-        <th></th>
-      </tr>
-      <tr>
-        <td><input id="activate" type="checkbox"></td>
-        <td><input id="angular" type="checkbox"></td>
-        <td><input id="domain"></td>
-        <td><input id="fromSrc"></td>
-        <td><input id="nameProject"></td>
-        <td><button id="append">append</button></td>
-      </tr>
-    </table>
-    <!-- <div style="display: flex; gap: 5px;">
-      <input id="websocketSrc" placeholder="websocket">
-      <button id="connect">connect</button>
-    </div> -->
-    <div id="myLog"></div>
-    <script src="popup.js"></script>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="button.css" />
+    </head>
+    <body>
+        <table id="tableList">
+            <tr>
+                <th>id</th>
+                <th>Activate</th>
+                <th>Angular</th>
+                <th>Domain</th>
+                <th>From Domain</th>
+                <th>From Bundle</th>
+                <th></th>
+            </tr>
+        </table>
+        <div style="display: flex; flex-direction: column; gap: 5px;">
+            <div><input id="activate" type="checkbox" /> Activate</div>
+            <div><input id="angular" type="checkbox" /> Angular</div>
+            <div><input id="domain" placeholder="Domain"/></div>
+            <div>
+                <select id="fromDomain" placeholder="From domain">
+                    <option>app.branches-mirror.zf-vist</option>
+                    <option>app.branches-ungr.zf-vist</option>
+                </select>
+            </div>
+            <div><input id="fromBundle" placeholder="From bundle"/></div>
+            <div><button id="append">append</button></div>
+        </div>
+        <script src="popup.js"></script>
+    </body>
 </html>
